# raster_hoymyr_dl

./: .gitignore  pyproject.toml  sjekker_features.py
__marimo__/session/: sjekker_features.py.json
